--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/mattogodoy/e-switch#readme",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "mqtt": "^2.1.3"
+  },
+  "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
