--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "homepage": "https://github.com/mattogodoy/e-switch#readme",
   "dependencies": {
     "express": "^4.14.0",
-    "mqtt": "^2.1.3"
+    "mqtt": "^2.1.3",
+    "pug": "^2.0.0-beta6"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
