--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "express-session": "^1.14.2",
+    "firebase": "^3.6.4",
     "mqtt": "^2.1.3",
     "pug": "^2.0.0-beta6"
   },
